--- a/.gitignore
+++ b/.gitignore
@@ -36,5 +36,11 @@ jspm_packages
 # Optional REPL history
 .node_repl_history
 
-# temporary
+#vscode
+.vscode
+
+# Artifacts
+*.d.ts
+*.js
+dist
 tmp
