--- a/package.json
+++ b/package.json
@@ -1,23 +1,18 @@
 {
-  "name": "tree",
-  "version": "1.0.0",
-  "description": "Tree data structure based on abstract graph",
+  "name": "graphtree",
+  "version": "0.0.0-semantically-released",
+  "description": "graph based tree data structure",
   "main": "dist/tree.class.js",
   "types": "dist/tree.class.d.ts",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/bracketedrebels/tree.git"
+    "url": "https://github.com/bracketedrebels/tree.git"
   },
-  "keywords": [
-    "typescript",
-    "entity",
-    "relationship",
-    "graph"
-  ],
+  "keywords": [ "typescript", "graph", "tree" ],
   "author": "mitrandir@bracketedrebels.com",
   "contributors": [
-    "mitrandir@bracketedrebels.com",
-    "wolfson@bracketedrebels.com"
+    "wolfson@bracketedrebels.com",
+    "mitrandir@bracketedrebels.com"
   ],
   "license": "MIT",
   "bugs": {
@@ -28,15 +23,32 @@
     "graphlib": "^2.1.1"
   },
   "devDependencies": {
-    "@types/graphlib": "*",
     "@types/jasmine": "*",
-    "del": "2.2.2",
-    "gulp": "3.9.1",
-    "gulp-jasmine": "2.4.2",
-    "gulp-typescript": "3.1.3",
+    "@types/node": "7.0.5",
+    "husky": "^0.13.2",
     "jasmine": "^2.5.2",
-    "merge2": "1.0.3",
+    "lint-staged": "^3.3.1",
+    "semantic-release": "^6.3.2",
     "tslint": "4.3.1",
-    "typescript": "^2.1.4"
+    "typescript": "2.2.1",
+    "typescript-standard": "^0.3.14",
+    "validate-commit-msg": "^2.11.1"
+  },
+  "scripts": {
+    "test": "node ./node_modules/jasmine/bin/jasmine.js JASMINE_CONFIG_PATH=.config/.jasmine.config.json",
+    "lint": "node ./node_modules/tslint/bin/tslint --fix --force -c .config/.tslint.config.json",
+    "lint-staged": "node ./node_modules/lint-staged/index.js",
+    "build": "node ./node_modules/typescript/bin/tsc -p .config/.typescript.config.json",
+    "release": "node ./node_modules/semantic-release/bin/semantic-release.js pre && npm publish && node ./node_modules/semantic-release/bin/semantic-release.js post",
+    "validate": "node ./node_modules/validate-commit-msg/lib/cli.js",
+    "commitmsg": "npm run validate",
+    "precommit": "npm run lint-staged",
+    "prepush": "npm run build && npm run test"
+  },
+  "lint-staged": {
+    "*.ts": [
+      "lint",
+      "git add"
+    ]
   }
 }
