--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   "devDependencies": {
     "@types/jasmine": "*",
     "@types/node": "7.0.5",
+    "@types/graphlib": "2.1.3",
     "husky": "^0.13.2",
     "jasmine": "^2.5.2",
     "lint-staged": "^3.3.1",
